--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express-handlebars": "^4.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.7"
+  },
+  "devDependencies": {
+    "standard": "^17.0.0"
   }
 }
